--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -25,37 +25,19 @@ package:
 build:
   script: python setup.py install
   noarch: python
-  entry_points:
-    - apstools_plan_catalog = apstools.examples:main
-    - bluesky_snapshot = apstools.snapshot:snapshot_cli
-    - bluesky_snapshot_viewer = apstools.snapshot:snapshot_gui
 
 requirements:
   host:
     - pip
     - python
-    - ophyd
-    - databroker
-    - bluesky
-    - pyRestTable
-    - pandas
-    - xlrd
   run:
     - python
-    - ophyd
-    - databroker
-    - bluesky
-    - pyRestTable
-    - pandas
-    - xlrd
 
 test:
   imports:
-    - apstools
-    - apstools.synApps_ophyd
+    - {{ name|lower }}
   commands:
-    - python -c "import apstools;"
-    - bluesky_snapshot --help
+    - python -c "import {{ name|lower }};"
 
 extra:
   recipe-maintainers:
