--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -38,6 +38,7 @@ test:
     - {{ name|lower }}
   commands:
     - python -c "import {{ name|lower }};"
+    - ainawuffa_toot
 
 extra:
   recipe-maintainers:
